--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    hello world
+   <h1>Hello world  </h1> 
     <script src="js/script.js"></script>
 </body>
 </html>
